--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         }
 
         .editor-page {
-            color: #000000 !important; /* Force black text */
+            color: #000000 !important;
         }
         .editor-content {
             outline: none;
